--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Online Store</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="enter">Вход</string>
+    <string name="last_name">Фамилия</string>
+    <string name="name">Имя</string>
+    <string name="phone_number">Номер телефона</string>
+    <string name="enter_button">Войти</string>
+    <string name="agreement">Нажимая кнопку “Войти”, Вы принимаете \n <u>условия программы лояльности</u></string>
 </resources>
